SectionA started and SectionB on

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 <body>
     <div class="container">
-            <div>
                 <header>
                     <nav>
                       <div class="containerOne">
@@ -65,9 +64,99 @@
                         <span class="item3" id="holiday">More than 500 accomodations are available in this city</span>
                     </div>
                 </header>
-            </div>
-        <div id="different">section</div>
-        <div id="color">footer</div>
+                <section>
+                    <div class="containerFive">
+                        <div class="containerFiveA">
+                            <p id="estate"><b>Accommodations in Marseille</b></p>
+                            <div class="containerFiveA1">
+                            <div class="item4">
+                                <a href="#"><img src="images/Roms/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="view" alt="Displaying Auberge la Cannebiere"></a>
+                                <p class="stay"><b>Auberge la Cannebière</b></p>
+                                <p class="night">Night starting at <b>25€</b></p>
+                                <div class="containerFiveA2">
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star star"></i></span>
+                                </div>
+                            </div>
+                            <div class="item4">
+                                <a href="#"><img src="images/Roms/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="view" alt="Displaying Hôtel du port"></a>
+                                <p class="stay"><b>Hôtel du port</b></p>
+                                <p class="night">Night starting at <b>52€</b></p>
+                                <div class="containerFiveA2">
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star"></i></span>
+                                <span><i class="fas fa-star"></i></span>
+                                </div>
+                            </div>
+                            <div class="item4">
+                                <a href="#"><img src="images/Roms/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="view" alt="Displaying les mouettes Hotel"></a>
+                                <p class="stay"><b>Les mouettes Hotel</b></p>
+                                <p class="night">Night starting at <b>76€</b></p>
+                                <div class="containerFiveA2">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star star"></i></span>
+                                </div>
+                            </div>
+                            <div class="item4">
+                                <a href="#"><img src="images/Roms/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="view" alt="Displaying Hôtel dela mer"></a>
+                                <p class="stay"><b>Hôtel de la mer</b></p>
+                                <p class="night">Night starting at <b>46€</b></p>
+                                <div class="containerFiveA2">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star star"></i></span>
+                                    <span><i class="fas fa-star star"></i></span>
+                                </div>  
+                            </div>
+                            <div class="item4">
+                                <a href="#"><img src="images/Roms/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="view" alt="Displaying Auberge Le Panier"></a>
+                                <p class="stay"><b>Auberge Le Panier</b></p>
+                                <p class="night">Night starting at <b>23€</b></p>
+                                <div class="containerFiveA2">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star star"></i></span>
+                                </div>  
+                            </div>
+                            <div class="item4">
+                                <a href="#"><img src="images/Roms/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="view" alt="Displaying Hôtel chez Amina"></a>
+                                <p class="stay"><b>Hôtel chez Amina</b></p>
+                                <p class="night">Night starting at <b>96€</b></p>
+                                <div class="containerFiveA2">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>      
+                            </div>
+                            <p id="indication"><b>Show more</b></p>
+                        </div>
+                    </div>
+                        <div class="containerFiveB">
+                            <div class="containerFiveB1">
+                                <p><b>Most Popular</b></p>
+                                <i class="fas fa-chart-line"></i>
+                            </div>
+                            <div class="containerFiveB2">
+                                <div class="item5" id="boxA">box1</div>
+                                <div class="item5" id="boxB">box2</div>
+                                <div class="item5" id="boxC">box3</div>
+                            </div>
+                        </div>
+                </section>
+                <div id="color">footer</div>
     </div>
     
 </body>
