--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-                <header>
+                <header id="move">
                     <nav>
                       <div class="containerOne">
                           <div class="item containerOneA">
@@ -69,94 +69,167 @@
                         <div class="containerFiveA">
                             <p id="estate"><b>Accommodations in Marseille</b></p>
                             <div class="containerFiveA1">
-                            <div class="item4">
-                                <a href="#"><img src="images/Roms/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="view" alt="Displaying Auberge la Cannebiere"></a>
-                                <p class="stay"><b>Auberge la Cannebière</b></p>
-                                <p class="night">Night starting at <b>25€</b></p>
-                                <div class="containerFiveA2">
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star star"></i></span>
+                                <div class="item4">
+                                    <a href="#"><img src="images/Roms/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="view" alt="Displaying Auberge la Cannebiere"></a>
+                                    <p class="stay"><b>Auberge la Cannebière</b></p>
+                                    <p class="night">Night starting at <b>25€</b></p>
+                                    <div class="containerFiveA2">
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item4">
-                                <a href="#"><img src="images/Roms/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="view" alt="Displaying Hôtel du port"></a>
-                                <p class="stay"><b>Hôtel du port</b></p>
-                                <p class="night">Night starting at <b>52€</b></p>
-                                <div class="containerFiveA2">
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star"></i></span>
-                                <span><i class="fas fa-star"></i></span>
+                                <div class="item4">
+                                    <a href="#"><img src="images/Roms/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="view" alt="Displaying Hôtel du port"></a>
+                                    <p class="stay"><b>Hôtel du port</b></p>
+                                    <p class="night">Night starting at <b>52€</b></p>
+                                    <div class="containerFiveA2">
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item4">
-                                <a href="#"><img src="images/Roms/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="view" alt="Displaying les mouettes Hotel"></a>
-                                <p class="stay"><b>Les mouettes Hotel</b></p>
-                                <p class="night">Night starting at <b>76€</b></p>
-                                <div class="containerFiveA2">
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star star"></i></span>
+                                <div class="item4">
+                                    <a href="#"><img src="images/Roms/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="view" alt="Displaying les mouettes Hotel"></a>
+                                    <p class="stay"><b>Les mouettes Hotel</b></p>
+                                    <p class="night">Night starting at <b>76€</b></p>
+                                    <div class="containerFiveA2">
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item4">
-                                <a href="#"><img src="images/Roms/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="view" alt="Displaying Hôtel dela mer"></a>
-                                <p class="stay"><b>Hôtel de la mer</b></p>
-                                <p class="night">Night starting at <b>46€</b></p>
-                                <div class="containerFiveA2">
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star star"></i></span>
-                                    <span><i class="fas fa-star star"></i></span>
-                                </div>  
-                            </div>
-                            <div class="item4">
-                                <a href="#"><img src="images/Roms/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="view" alt="Displaying Auberge Le Panier"></a>
-                                <p class="stay"><b>Auberge Le Panier</b></p>
-                                <p class="night">Night starting at <b>23€</b></p>
-                                <div class="containerFiveA2">
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star star"></i></span>
-                                </div>  
-                            </div>
-                            <div class="item4">
-                                <a href="#"><img src="images/Roms/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="view" alt="Displaying Hôtel chez Amina"></a>
-                                <p class="stay"><b>Hôtel chez Amina</b></p>
-                                <p class="night">Night starting at <b>96€</b></p>
-                                <div class="containerFiveA2">
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                    <span><i class="fas fa-star"></i></span>
-                                </div>      
+                                <div class="item4">
+                                    <a href="#"><img src="images/Roms/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="view" alt="Displaying Hôtel dela mer"></a>
+                                    <p class="stay"><b>Hôtel de la mer</b></p>
+                                    <p class="night">Night starting at <b>46€</b></p>
+                                    <div class="containerFiveA2">
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star star"></i></span>
+                                        <span><i class="fas fa-star star"></i></span>
+                                    </div>  
+                                </div>
+                                <div class="item4">
+                                    <a href="#"><img src="images/Roms/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="view" alt="Displaying Auberge Le Panier"></a>
+                                    <p class="stay"><b>Auberge Le Panier</b></p>
+                                    <p class="night">Night starting at <b>23€</b></p>
+                                    <div class="containerFiveA2">
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star star"></i></span>
+                                    </div>  
+                                </div>
+                                <div class="item4">
+                                    <a href="#"><img src="images/Roms/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="view" alt="Displaying Hôtel chez Amina"></a>
+                                    <p class="stay"><b>Hôtel chez Amina</b></p>
+                                    <p class="night">Night starting at <b>96€</b></p>
+                                    <div class="containerFiveA2">
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                        <span><i class="fas fa-star"></i></span>
+                                    </div>      
+                                </div>
                             </div>
                             <p id="indication"><b>Show more</b></p>
                         </div>
-                    </div>
                         <div class="containerFiveB">
                             <div class="containerFiveB1">
                                 <p><b>Most Popular</b></p>
                                 <i class="fas fa-chart-line"></i>
                             </div>
                             <div class="containerFiveB2">
-                                <div class="item5" id="boxA">box1</div>
-                                <div class="item5" id="boxB">box2</div>
-                                <div class="item5" id="boxC">box3</div>
+                                <div class="item5 containerFiveB2A" id="boxA">
+                                    <div><a href="#"><img src="images/Roms/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="see" alt="Displaying Morning Sun Hotel"></a></div>
+                                    <div>
+                                        <p class="stay"><b>Morning Sun Hotel</b></p>
+                                        <p class="night">Night starting at <b>128€</b></p>
+                                        <div class="containerFiveA2">
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                        </div>      
+                                    </div>
+                                </div>
+                                <div class="item5 containerFiveB2A" id="boxB">
+                                    <div><a href="#"><img src="images/Roms/aw-creative-VGs8z60yT2c-unsplash.jpg" class="see" alt="Displaying Au cœur the l'eau Bed and Breakfast"></a></div>
+                                    <div>
+                                        <p class="stay" id="spacing"><b>Au cœur the l'eau Bed and Breakfast</b></p>
+                                        <p class="night" id="gap">Night starting at <b>71€</b></p>
+                                        <div class="containerFiveA2">
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star star"></i></span>
+                                        </div>      
+                                    </div>
+                                </div>
+                                <div class="item5 containerFiveB2A" id="boxC">
+                                    <div><a href="#"><img src="images/Roms/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="see" alt="Displaying Tout bleu et Blanc Hotel"></a></div>
+                                    <div>
+                                        <p class="stay" id="spacing"><b>Tout bleu et Blanc Hotel</b></p>
+                                        <p class="night" id="gap">Night starting at <b>68€</b></p>
+                                        <div class="containerFiveA2">
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star star"></i></span>
+                                        </div>      
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="containerSix">
+                        <p id="size"><b>Activities in Marseille</b></p>
+                        <div class="containerSixA">
+                            <div class="item6" id="cupA">
+                                <a href="#"><img src="images/Places/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="map" alt="Displaying Old Port"></a>
+                                <p class="stay"><b>Old Port</b></p>
+                            </div>
+                            <div class="item6 containerSixA1">
+                                <div id="cupB">
+                                    <a href="#"><img src="images/Places/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="map" alt="Displaying Pomègues Fort"></a>
+                                    <p class="stay"><b>Pomègues Fort</b></p>
+                                </div>
+                                <div id="cupC">
+                                    <a href="#"><img src="images/Places/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="map" alt="Displaying Frioul Island "></a>
+                                    <p class="stay"><b>Frioul Island</b></p>
+                                </div>
+                            </div>
+                            <div class="item6" id="cupD">
+                                <a href="#"><img src="images/Places/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="map" alt="Displaying Calanques National Park "></a>
+                                <p class="stay"><b>Calanques National Park</b></p>
+                            </div>
+                            <div class="item6 containerSixA2">
+                                <div id="cupB">
+                                    <a href="#"><img src="images/Places/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="map" alt="Displaying Notre-Dame-de-la-Garde"></a>
+                                    <p class="stay"><b>Notre-Dame-de-la-Garde</b></p>
+                                </div>
+                                <div id="cupC">
+                                    <a href="#"><img src="images/Places/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="map" alt="Displaying Longchamp Park"></a>
+                                    <p class="stay"><b>Longchamp Park</b></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
-                <div id="color">footer</div>
+                <footer id="foot">footer</footer>
     </div>
     
 </body>
