--- a/index.html
+++ b/index.html
@@ -229,7 +229,24 @@
                         </div>
                     </div>
                 </section>
-                <footer id="foot">footer</footer>
+                <footer class="containerSeven" id="foot">
+                    <div class="item7">
+                        <p><b>About</b></p>
+                        <p>Site Map</p>
+                        <p>General Terms and Conditions</p>
+                        <p>Data and Privacy</p>
+                    </div>
+                    <div class="item7 change">
+                        <p><b>Our Accommodations</b></p>
+                        <p>Quality Assessment</p>
+                        <p>You have a Hotel?</p>
+                    </div>
+                    <div class="item7 change">
+                        <p><b>Assistance</b></p>
+                        <p>Help Desk</p>
+                        <p>Contact Us</p>
+                    </div>
+                </footer>
     </div>
     
 </body>
