made second changes to the page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- General info -->
 <title>Reservia</title>
 <meta charset="utf-8">
-<meta name="description" content="Looking for a site that will help you plan your vacation? Try Reservia!"
+<meta name="description" content="Looking for a site that will help you plan your vacation? Try Reservia!">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
@@ -30,7 +30,7 @@
                         </div>
                     </nav>
                     <div>
-                        <p id="heading"><b>Find a place for your dream vacation</b></p>
+                        <h3><b>Find a place for your dream vacation</b></h3>
                         <p>Downtown or in nature</p>
                     </div>
                     <div class="containerTwo">
@@ -67,7 +67,7 @@
                 <section>
                     <div class="containerFive">
                         <div class="containerFiveA">
-                            <p id="estate"><b>Accommodations in Marseille</b></p>
+                            <h3 class="estate"><b>Accommodations in Marseille</b></h3>
                             <div class="containerFiveA1">
                                 <div class="item4">
                                     <a href="#" class="make">
@@ -186,8 +186,8 @@
                                     </a>
                                     <a href="#" class="make">
                                         <div>
-                                            <p class="stay" id="spacing"><b>Au cœur the l'eau Bed and Breakfast</b></p>
-                                            <p class="night" id="gap">Night starting at <b>71€</b></p>
+                                            <p class="stay"><b>Au cœur the l'eau Bed and Breakfast</b></p>
+                                            <p class="night">Night starting at <b>71€</b></p>
                                             <div class="containerFiveA2">
                                                 <span><i class="fas fa-star"></i></span>
                                                 <span><i class="fas fa-star"></i></span>
@@ -201,10 +201,11 @@
                                 <div class="item5 containerFiveB2A" id="boxC">
                                     <a href="#" class="make">
                                         <div><img src="images/Roms/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="see" alt="Displaying Tout bleu et Blanc Hotel"></div>
+                                    </a>
                                     <a href="#" class="make">
                                         <div>
-                                            <p class="stay" id="spacing"><b>Tout bleu et Blanc Hotel</b></p>
-                                            <p class="night" id="gap">Night starting at <b>68€</b></p>
+                                            <p class="stay"><b>Tout bleu et Blanc Hotel</b></p>
+                                            <p class="night">Night starting at <b>68€</b></p>
                                             <div class="containerFiveA2">
                                                 <span><i class="fas fa-star"></i></span>
                                                 <span><i class="fas fa-star"></i></span>
@@ -219,7 +220,7 @@
                         </div>
                     </div>
                     <div class="containerSix">
-                        <p id="size"><b>Activities in Marseille</b></p>
+                        <h3 class="size"><b>Activities in Marseille</b></h3>
                         <div class="containerSixA">
                             <div class="item6" id="cupA">
                                 <a href="#" class="make">
