--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
 <!-- Link to CSS file (STYLESHEET) -->
-<link href="css/style.css" type="text/css" rel="stylesheet">
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 
 <!-- font awesome kit's code -->
 <script src="https://kit.fontawesome.com/460881da28.js" crossorigin="anonymous"></script>
