made changes to check errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
 <!-- Link to CSS file (STYLESHEET) -->
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+<link href="CSS/style.css" type="text/css" rel="stylesheet" />
 
 <!-- font awesome kit's code -->
 <script src="https://kit.fontawesome.com/460881da28.js" crossorigin="anonymous"></script>
@@ -168,7 +168,7 @@
                                     </a>
                                     <a href="#" class="make">
                                         <div>
-                                            <p class="stay"><b>Morning Sun Hotel</b></p>
+                                            <p class="stay long"><b>Morning Sun Hotel</b></p>
                                             <p class="night">Night starting at <b>128€</b></p>
                                             <div class="containerFiveA2">
                                                 <span><i class="fas fa-star"></i></span>
