--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>Reservia</title>
 <meta charset="utf-8">
 <meta name="description" content="Looking for a site that will help you plan your vacation? Try Reservia!">
+
+<!--site font used-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
@@ -13,6 +15,9 @@
 
 <!-- font awesome kit's code -->
 <script src="https://kit.fontawesome.com/460881da28.js" crossorigin="anonymous"></script>
+
+<!--setting the viewport to the same width as the screen-->
+<meta name="viewport" content="width=device-width" />
 </head>
 <body>
     <div class="container">
@@ -30,7 +35,7 @@
                         </div>
                     </nav>
                     <div>
-                        <h3><b>Find a place for your dream vacation</b></h3>
+                        <h3 class="break"><b>Find a place for your dream vacation</b></h3>
                         <p>Downtown or in nature</p>
                     </div>
                     <div class="containerTwo">
